compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__externals__discarded_names_in_external_are_passed_correctly.snap
---
source: compiler-core/src/javascript/tests/externals.rs
assertion_line: 319
expression: "\n@external(javascript, \"wibble\", \"wobble\")\npub fn woo(_ignored: a) -> Nil\n"
---
----- SOURCE CODE

@external(javascript, "wibble", "wobble")
pub fn woo(_ignored: a) -> Nil


----- COMPILED JAVASCRIPT
import { wobble as woo } from "wibble";

export { woo };
