compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__externals__external_type_typescript.snap
---
source: compiler-core/src/javascript/tests/externals.rs
assertion_line: 91
expression: "pub type Queue<a>\n\n@external(javascript, \"queue\", \"new\")\npub fn new() -> Queue<a>\n"
---
----- SOURCE CODE
pub type Queue<a>

@external(javascript, "queue", "new")
pub fn new() -> Queue<a>


----- TYPESCRIPT DEFINITIONS
export type Queue$<I> = any;

export function new$(): Queue$<any>;
